<resources>
    <string name="app_name">Whisper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="start_capture_voice">Start Capture</string>
    <string name="end_capture_voice">End Capture</string>
    <string name="title_activity_wp_tab">WpTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_chat">Chat</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_settings">Settings</string>

    <string name="action_sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_user_interface">User Interface</string>
    <string name="pref_ui_font_size">Font Size</string>

    <string name="pref_stt">Speech to Text</string>
    <string name="pref_stt_switch">Enable</string>
    <string name="pref_stt_lang">Language</string>

    <string name="pref_tts">Text to Speech</string>
    <string name="pref_tts_switch">Enable</string>
    <string name="pref_tts_lang">Language</string>

    <string name="pref_feedback">Feedback</string>
    <string name="pref_fb_ontouch">On Touch</string>

    <string name="opts_values_font_size_default">1</string>
    <string name="opts_values_stt_lang_default">en-US</string>
    <string name="opts_values_tts_lang_default">en-US</string>
    <string name="opts_values_fb_type_default">2</string>
    <string name="pref_vibrate_on_click">Vibrate onClick</string>

</resources>
