<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_interface">

        <ListPreference
            android:defaultValue="@string/opts_values_font_size_default"
            android:entries="@array/opts_font_size"
            android:entryValues="@array/opts_values_font_size"
            android:key="ui.fontsize"
            android:summary="%s"
            android:title="@string/pref_ui_font_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_stt">
        <SwitchPreference
            android:defaultValue="false"
            android:key="stt.switch"
            android:title="@string/pref_stt_switch" />

        <ListPreference
            android:defaultValue="@string/opts_values_stt_lang_default"
            android:entries="@array/opts_stt_lang"
            android:entryValues="@array/opts_values_stt_lang"
            android:key="stt.lang"
            android:summary="%s"
            android:title="@string/pref_stt_lang" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_tts">
        <SwitchPreference
            android:defaultValue="false"
            android:key="tts.switch"
            android:title="@string/pref_tts_switch" />

        <ListPreference
            android:defaultValue="@string/opts_values_tts_lang_default"
            android:entries="@array/opts_tts_lang"
            android:entryValues="@array/opts_values_tts_lang"
            android:key="tts.lang"
            android:summary="%s"
            android:title="@string/pref_tts_lang" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_feedback">
        <SwitchPreference
            android:defaultValue="false"
            android:key="fb.vibrate_on_click"
            android:title="@string/pref_vibrate_on_click" />
    </PreferenceCategory>

</PreferenceScreen>